トップページを直しました

--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
 
       <section class="purpose">
         <div class="scroll-divider">
-          <div class="scroll-text">ProNavi ProNavi ProNavi ProNavi ProNavi</div>
+          <div class="scroll-text">ProNavi ProNavi ProNavi ProNavi</div>
         </div>
 
         <div class="wrapper">
@@ -298,7 +298,14 @@
         </div>
       </section>
 
+      
+      <div class="video-bg-wrap">
+        <div class="video-bg">
+          <video src="img/main_bg.mp4" autoplay muted loop playsinline></video>
+        </div>
       <section class="before-after">
+
+        
         <div class="wrapper">
           <h4 class="message">
             ProNaviで多くの受講生が、<br /><span>“実践的な”</span
@@ -307,40 +314,40 @@
 
           <ul class="list">
             <li>
-              <img src="img/before-after-1.png" alt="" />
+              <img src="img/before-after-1.png" alt="" class="fadein"/>
               <p class="middle left">
-                <span class="label">before</span>
-                <span class="text">独学で挫折</span>
+                <span class="label fadein">before</span>
+                <span class="text fadein">独学で挫折</span>
               </p>
               <p class="middle right">
-                <span class="label">after</span>
-                <span class="text">5ヶ月で初案件獲得</span>
+                <span class="label fadein">after</span>
+                <span class="text fadein">5ヶ月で初案件獲得</span>
               </p>
               <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
               <p class="small">ちえさん｜30歳｜会社員</p>
             </li>
             <li>
-              <img src="img/before-after-2.png" alt="" />
+              <img src="img/before-after-2.png" alt="" class="fadein"/>
               <p class="middle left">
-                <span class="label">before</span>
-                <span class="text">スキルに不安</span>
+                <span class="label fadein">before</span>
+                <span class="text fadein">スキルに不安</span>
               </p>
               <p class="middle right">
-                <span class="label">after</span>
-                <span class="text">自分の制作で喜ばれるように</span>
+                <span class="label fadein">after</span>
+                <span class="text fadein">自分の制作で喜ばれるように</span>
               </p>
               <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
               <p class="small">みきさん｜20歳｜専業主婦</p>
             </li>
             <li>
-              <img src="img/before-after-3.png" alt="" />
+              <img src="img/before-after-3.png" alt="" class="fadein"/>
               <p class="middle left">
-                <span class="label">before</span>
-                <span class="text">仕事と両立できない</span>
+                <span class="label fadein">before</span>
+                <span class="text fadein">仕事と両立できない</span>
               </p>
               <p class="middle right">
-                <span class="label">after</span>
-                <span class="text">毎月安定して収入に</span>
+                <span class="label fadein">after</span>
+                <span class="text fadein">毎月安定して収入に</span>
               </p>
               <div class="arrow"><img src="img/arrow1.png" alt="" /></div>
               <p class="small">太郎さん｜30歳｜会社員</p>
@@ -423,6 +430,7 @@
           </div>
         </div>
       </section>
+      </div>
 
       <section
         id="flow"
