--- a/voice.html
+++ b/voice.html
@@ -106,37 +106,37 @@
         <ul class="menu">
           <li>
             <a href="index.html">
-              <span class="en">top</span>
+              <span class="en">Top</span>
               <span class="ja">トップページ</span>
             </a>
           </li>
           <li>
             <a href="about.html">
-              <span class="en">about</span>
+              <span class="en">About</span>
               <span class="ja">スクールの紹介</span>
             </a>
           </li>
           <li>
             <a href="voice.html">
-              <span class="en">voice</span>
+              <span class="en">Voice</span>
               <span class="ja">受講生の声</span>
             </a>
           </li>
           <li>
             <a href="#">
-              <span class="en">price</span>
+              <span class="en">Price</span>
               <span class="ja">料金</span>
             </a>
           </li>
           <li>
             <a href="#">
-              <span class="en">faq</span>
+              <span class="en">FAQ</span>
               <span class="ja">よくある質問</span>
             </a>
           </li>
           <li>
             <a href="company.html">
-              <span class="en">company</span>
+              <span class="en">Company</span>
               <span class="ja">会社概要</span>
             </a>
           </li>
@@ -148,7 +148,11 @@
               >公式LINE</a
             >
           </li>
-          <li><a href="https://pronavi-board.noe-p.com/">PortNavi</a></li>
+          <li>
+            <a href="https://pronavi-board.noe-p.com/"
+              >PortNavi <span>〜受講生の制作物〜</span></a
+            >
+          </li>
           <li>
             <a
               href="https://www.instagram.com/kakashi.programming.lab?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw=="
@@ -169,47 +173,49 @@
         <ul class="menu">
           <li>
             <a href="about.html">
-              <span class="en">about</span>
+              <span class="en">About</span>
               <span class="ja">スクールの紹介</span>
             </a>
           </li>
           <li>
             <a href="voice.html">
-              <span class="en">voice</span>
+              <span class="en">Voice</span>
               <span class="ja">受講生の声</span>
             </a>
           </li>
           <li>
             <a href="#">
-              <span class="en">price</span>
+              <span class="en">Price</span>
               <span class="ja">料金</span>
             </a>
           </li>
           <li>
             <a href="#">
-              <span class="en">faq</span>
+              <span class="en">FAQ</span>
               <span class="ja">よくある質問</span>
             </a>
           </li>
           <li>
             <a href="company.html">
-              <span class="en">company</span>
+              <span class="en">Company</span>
               <span class="ja">会社概要</span>
             </a>
           </li>
         </ul>
 
         <!-- 固定 -->
-        <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line"
-          >LINE相談</a
-        >
+        <div class="fixed">
 
-        <div class="hamburger_fixed">
-          <div class="hamburger_toggle">
-            <span></span>
-            <span></span>
-            <span></span>
+          <a href="https://line.me/R/ti/p/@420zidsx?oat_content=url" class="line">LINE相談</a>
+
+          <div class="hamburger_fixed">
+            <div class="hamburger_toggle">
+              <span></span>
+              <span></span>
+              <span></span>
+            </div>
           </div>
+
         </div>
         <!--  -->
       </nav>
@@ -217,7 +223,7 @@
 
     <main>
       <section id="voice-fv" class="wrapper voice-fv">
-        <span class="section-title__en">VOICE</span>
+        <span class="section-title__en fadein">VOICE</span>
         <h2 class="section-title flex-left">生徒の声</h2>
       </section>
 
@@ -230,7 +236,7 @@
 
           <ul class="list">
             <li>
-              <img src="img/voice-1.png" alt="" />
+              <img src="img/voice-1.png" alt=""  class="fadein"/>
               <p class="text-1">2023年4月入会</p>
               <p class="text-2">
                 マンツーマン授業で、疑問を一緒に解決してもらえるだけでなく、自分で調べたり考える力もついたと思います。
@@ -238,7 +244,7 @@
               <p class="small">N・Yさん｜30歳｜会社員</p>
             </li>
             <li>
-              <img src="img/before-after-2.png" alt="" />
+              <img src="img/before-after-2.png" alt="" class="fadein"/>
               <p class="text-1">2023年5月入会</p>
               <p class="text-2">
                 プログラミングは全くの未経験でしたが、短期間で自分でWebサイトを作れるようになりました。
@@ -246,7 +252,7 @@
               <p class="small">K・Hさん｜20代｜専業主婦</p>
             </li>
             <li>
-              <img src="img/before-after-3.png" alt="" />
+              <img src="img/before-after-3.png" alt="" class="fadein"/>
               <p class="text-1">2023年8月入会</p>
               <p class="text-2">
                 副業からフリーランスになりたいと思って入会。初心者の僕でも挫折せず挫折せずに進められました。
@@ -263,7 +269,7 @@
             <li class="meetup">
               <div class="left">
                 <h3 class="section-title">
-                  第１回プロナビオフ会<span>Meetup</span>
+                  <span class="yellow">第１回</span>プロナビオフ会<span class="small">Meetup</span>
                 </h3>
                 <p class="text">開催地：名古屋<br />参加人数：　人</p>
               </div>
@@ -278,7 +284,7 @@
             <li class="meetup">
               <div class="left">
                 <h3 class="section-title">
-                  第２回プロナビオフ会<span>Meetup</span>
+                  <span class="yellow">第２回</span>プロナビオフ会<span class="small">Meetup</span>
                 </h3>
                 <p class="text">開催地：名古屋<br />参加人数：　人</p>
               </div>
@@ -293,7 +299,7 @@
             <li class="meetup">
               <div class="left">
                 <h3 class="section-title">
-                  第３回プロナビオフ会<span>Meetup</span>
+                  <span class="yellow">第３回</span>プロナビオフ会<span class="small">Meetup</span>
                 </h3>
                 <p class="text">開催地：名古屋<br />参加人数：　人</p>
               </div>
@@ -314,28 +320,28 @@
 
           <ul class="list">
             <li>
-              <img src="img/metaleaf-1.png" alt="" />
+              <img src="img/metaleaf-1.png" alt="" class="fadein"/>
               <p class="text">
                 フリースペース <span>気軽に話せる仲間が集まれる場所。</span>
               </p>
             </li>
 
             <li>
-              <img src="img/metaleaf-2.png" alt="" />
+              <img src="img/metaleaf-2.png" alt="" class="fadein"/>
               <p class="text">
                 毎週月曜のセミナー <span>新しい発見や刺激が見つかる場所。</span>
               </p>
             </li>
 
             <li>
-              <img src="img/metaleaf-3.png" alt="" />
+              <img src="img/metaleaf-3.png" alt="" class="fadein"/>
               <p class="text">
                 初心者専用部屋 <span>先輩が優しく声をかけてくれる場所。</span>
               </p>
             </li>
 
             <li>
-              <img src="img/metaleaf-4.png" alt="" />
+              <img src="img/metaleaf-4.png" alt="" class="fadein"/>
               <p class="text">
                 モクモクブース <span>静かに集中したい人のための場所。</span>
               </p>
